@@ -18,11 +18,11 @@ Big Issue:
 Big Goal:
   Build an educational game suite all accessible from a single user interface.
   GCompris provides a simple to use user interface that makes it easy to select
-  appropriate boards. 
+  appropriate boards.
 
 How:
   GCompris is designed in a way that it is easy to add new boards to it.
-  Today a board is called with the root canvas of the main window, and then 
+  Today a board is called with the root canvas of the main window, and then
   the board is free to implement the game scheme it wants.
   The status bar is a common facility provided to the board.
 
@@ -45,5 +45,5 @@ About You:
 -------------------------------------------------------------------------------
                            NOTE TO TRANSLATORS
 
-Read the po/TRANSLATORS.README to get additional information on GCompris
+Read the README.translators to get additional information on GCompris
 translation.
