@@ -1,3 +1,15 @@
+2006-10-05  Bruno coudoin  <bruno.coudoin@free.fr>
+
+	- added a new tool from Miguel DE IZARRA /miguel2i on free point fr/
+	  This tool allow us to create puzzle or geography type activity
+	  with ease.
+	  It's a gimp python-fu script so you need gimp and python foo
+	  on your system.
+	* tools/gcompris_shapegame.py:
+
+	* INSTALL: minor update
+	* README: minor update
+
 2006-10-03  Bruno coudoin  <bruno.coudoin@free.fr>
 
 	- Imported these files from the gnome-python module in the gnome CVS
